fixed all current contrast errors

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,6 +11,7 @@
   --mainly-red: #ffdee3;
   --semi-pink: #ff8896;
   --white-smoke: #f3f3f3;
+  --black: #000;
 
   /* Utilities */
   --small-box-shadow: 1px -1px 7px 0 var(--brink-pink);
@@ -51,7 +52,7 @@ i:hover,
 }
 
 body {
-  background-image: url('/assets/images/wine-1543170_1280.jpg');
+  /* background-image: url('/assets/images/wine-1543170_1280.jpg'); */
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -68,9 +69,9 @@ footer {
 }
 
 h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 30px !important;
   font-family:var(--letter-font);
   color: var(--deep-carmine-pink) !important;
@@ -115,7 +116,7 @@ body {
   margin: 30px 15px;
   font-family: var(--letter-font);
   font-weight: 600;
-  font-size: 1.3em;
+  font-size: 1.6em;
   color: var(--deep-carmine-pink);
 }
 
@@ -143,18 +144,15 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
 
 .navbar-nav .nav-link.active,
 .navbar-nav .nav-link.show:hover {
-  color: var(--deep-carmine-pink) !important;
+  color: #000 !important;
 }
 
-/* .navbar-expand-lg .navbar-collapse {
-  font-size: larger;
-} */
 
 a.nav-link {
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
-  color: var(--mainly-red) !important;
+  color: #000 !important;
 }
 
 /* Footer section  */
@@ -173,6 +171,9 @@ footer.text-center.text-lg-start.text-white {
   color: var(--semi-pink);
 }
 
+.footerText {
+  color: #000 !important;
+}
 
 /* Generate Letter Button */
 #generateButton {
